# neuro_modeling

./: .gitattributes  .gitignore  METHODS_AND_RESULTS_ZH.md  NOTICE.md  README.md  REPRODUCE.md  pytest.ini
local_plasticity_gated_dynamics/: .gitignore  LIMITATIONS.md  README.md  pyproject.toml
local_plasticity_gated_dynamics/brief/: contribution-map.yaml  evidence-matrix.csv  topic-brief.md
local_plasticity_gated_dynamics/configs/: exp14_allen_macro_region_mapping_v1.json
local_plasticity_gated_dynamics/data/: __init__.py  compositional_tasks_loader.py  orbit_official_splits.json
local_plasticity_gated_dynamics/docs/: actuator_matching_principle.md  arc_recursive_baseline_contract_zh.md  branch_consolidation.md  current_evidence_critical_audit.md  effective_control_research_contract_zh.md  exp26_actuator_phase_diagram_protocol.md  exp27_actuator_selector_protocol.md  exp28_ceiling_amendment_1.md  exp28_independent_actuator_selector_protocol.md  exp29_confirmatory_actuator_selector_protocol.md  exp29_confirmatory_source_protocol.md  exp30_associative_actuator_trend_protocol.md  exp31_hidden_reliability_reward_selector_protocol.md  exp32_evidence_per_dwell_boundary_protocol.md  exp32_persistent_sparse_feedback_protocol.md  exp33_orbit_streaming_fewshot_protocol.md  exp34_orbit_causal_consensus_protocol.md  ibl_multisession_neural_contract_zh.md  real_task_frontier_20260724.md  structured_reasoning_validation_contract_zh.md  task_specialized_reasoning_contract_zh.md  tiny_recursive_baseline_contract_zh.md
local_plasticity_gated_dynamics/experiments/: README.md  common.py  exp00_fixed_point.py  exp01_feedback_dimension_sweep.py  exp02_context_ei_oracle_gate.py  (+35 more)
shared_dynamics_real_data/: README.md  __init__.py  build_report.py  data.py  lds.py  pipeline.py  preprocessing.py  pyproject.toml  run_visual_context.py  splits.py
(+1125 files in other folders)
