[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-plasticity-gated-dynamics"
version = "0.1.0"
description = "Local three-factor plasticity, gated low-dimensional dynamics, and shared-subspace tests"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "matplotlib>=3.8",
  "statsmodels>=0.14",
  "h5py>=3.10",
]

[project.optional-dependencies]
ibl = ["ONE-api>=3,<4", "ibllib>=3.3"]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "slow: formal-size or multi-seed experiment tests",
  "integration: tests requiring optional data or services",
]

[tool.ruff]
exclude = [
  ".python311",
  ".venv",
  "data",
  "results",
  "trash",
  # Byte-exact, hash-pinned upstream/one-shot audit snapshot; never imported.
  "provenance/exp14_ibl_compact",
]
